Fix: social media icon alignment

--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,7 @@ body {
 }
 
 .social-icons img {
-    width: 30px;
+    width: 25px;
     margin: 5px;
 }
 
